fix(env): ensure MAX_WEBHOOKS is defined in test environment configuration

--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,7 @@ ENVIRONMENT=development # production, development
 APP_URL=http://localhost:8080 # Base URL where the API will be accessible
 APP_PORT=8080 # Port where the API will run
 LOG_LEVEL=debug # Log level: debug, info, warn, error
+MAX_WEBHOOKS=5 # Maximum number of webhooks per instance
 
 # ################################################
 
